--- a/experience.html
+++ b/experience.html
@@ -12,6 +12,13 @@
     <!--<link rel="icon" href="images/favicon.ico" type="image/x-icon">-->
     <link rel="icon" href="images/favicon2.png" type="image/png">
     <style>
+        
+            @keyframes shimmer {
+                100% {
+                transform: translateX(150%);
+                    }
+            }
+        
         html {
             font-size: 110%; /* makes the site look like 125% zoom */
           }
@@ -99,9 +106,9 @@
                             </div>
                             <div class="mt-4 md:mt-0">
                                 <!--<span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Cisco Systems, Inc.</span>-->
-                                <span class="inline-block px-3 py-1 rounded-full bg-purple-600 text-white font-semibold relative overflow-hidden">
-                                <span class="relative z-10">Larsen and Toubro Infotech (LTI)</span>
-                                <span class="absolute inset-0 bg-gradient-to-t from-white/30 to-transparent"></span>
+                                <span class="inline-block px-3 py-1 rounded-full bg-purple-600 text-white font-bold relative overflow-hidden">
+                                <span class="relative z-10">Cisco</span>
+                                <span class="absolute top-0 left-[-150%] w-[200%] h-full bg-gradient-to-r from-transparent via-white/40 to-transparent animate-[shimmer_2s_infinite]"></span>
                                 </span>
                                 <span class="ml-3 text-gray-700">July 2022 – April 2024</span>
                             </div>
