--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                                 <a href="mailto:allmyfavsubs@outlook.com" class="text-gray-600 hover:text-blue-600">allmyfavsubs@outlook.com</a>
                             </div>
                         </div>
-                        <div class="flex items-start">
+                        <!--<div class="flex items-start">
                             <div class="bg-blue-100 p-3 rounded-lg mr-4">
                                 <i data-feather="phone" class="text-blue-600"></i>
                             </div>
@@ -70,7 +70,7 @@
                                 <h3 class="font-bold text-gray-800 mb-1">Phone</h3>
                                 <a href="tel:+12223334444" class="text-gray-600 hover:text-blue-600">+1 222 333 4444</a>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="flex items-start">
                             <div class="bg-blue-100 p-3 rounded-lg mr-4">
                                 <i data-feather="map-pin" class="text-blue-600"></i>
