--- a/contact.html
+++ b/contact.html
@@ -99,8 +99,9 @@
                 <div class="md:w-1/2" data-aos="fade-left">
                     <div class="bg-gray-50 p-8 rounded-lg shadow-sm">
                         <h2 class="text-2xl font-bold text-gray-800 mb-6">Send Me a Message</h2>
-                        <form>
-                            <div class="mb-4">
+                        
+                        <form action="https://formspree.io/f/xpwyzedw" method="POST">
+                           <div class="mb-4">
                                 <label for="name" class="block text-gray-700 font-medium mb-2">Name</label>
                                 <input type="text" id="name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500">
                             </div>
