--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
     </style>
 </head>
-<body class="bg-white font-sans">
+<!--<body class="bg-white font-sans">-->
     <canvas id="splash" width="800" height="600"></canvas>
     <div id="vanta-bg" class="fixed inset-0 -z-10 opacity-10"></div>
     
@@ -205,7 +205,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
-    <script src="js/splash.js"></script>
+    <!--<script src="js/splash.js"></script>-->
     <script>
         VANTA.GLOBE({
             el: "#vanta-bg",
